# MPM-CudaJax

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  bench_profile.py  bench_quick.py  pyproject.toml  ruff.toml  simulate.py
.claude/: settings.json
conf/: benchmark.yaml  config.yaml  sweep_all.yaml  sweep_baseline.yaml  sweep_profile.yaml  sweep_quick.yaml
conf/backend/: pytorch.yaml
conf/kernel/: cuda_naive.yaml  cuda_v1.yaml  cuda_v2.yaml  cuda_v3.yaml  cuda_v4.yaml  cuda_warp.yaml  jax.yaml
conf/material/: jelly.yaml  sand.yaml
conf/profile/: jax.yaml  ncu.yaml  nsys.yaml
conf/sim/: default.yaml
conf/sweep/: baseline.yaml  quick.yaml
docs/superpowers/plans/: 2026-03-24-pluggable-p2g-refactor.md
docs/superpowers/specs/: 2026-03-24-refactor-pluggable-p2g-design.md
mpm_jax/: __init__.py  boundary.py  constitutive.py  g2p.py  grid_update.py  solver.py  state.py  weights.py
mpm_jax/cuda/: benchmark.py  p2g_cuda.py  p2g_custom_op.py  p2g_kernel.cu  runtime.py
mpm_jax/cuda/kernels/: Makefile  p2g_compute.cuh  p2g_fused.cu  p2g_scatter.cu  p2g_scatter_naive.cu  p2g_scatter_smem.cu  p2g_scatter_warp.cu
mpm_jax/p2g/: __init__.py  cuda_naive.py  cuda_warp.py  jax.py
multirun/2026-03-24/00-18-49/: multirun.yaml
multirun/2026-03-24/00-19-33/: multirun.yaml
tests/: bench_all.py  compare_cuda_jax.py  debug_warp.py  debug_warp2.py  test_boundary.py  test_constitutive.py  test_g2p.py  test_grid_update.py  test_integration.py  test_p2g_cuda.py  test_p2g_jax.py  test_solver.py  test_state.py  test_warp_compile.py
(+8 files in other folders)
