[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mpm-cudajax"
version = "0.1.0"
requires-python = ">=3.10"
description = "MLS-MPM benchmark: JAX/XLA vs hand-written CUDA"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf",
    "matplotlib",
    "tqdm",
    "numpy",
    "wandb",
]

[project.optional-dependencies]
jax = ["jax>=0.4.20", "jaxlib>=0.4.20"]
jax-cuda = ["jax[cuda12]>=0.4.20"]
cuda = ["cuda-core"]
all = ["jax[cuda12]>=0.4.20", "cuda-core"]

[tool.setuptools.packages.find]
include = ["mpm_jax*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
